syntax = "proto3";

package golem.cloud.common;

import "golem/cloud/common/plan_id.proto";
import "golem/cloud/common/plan_data.proto";

message Plan {
  PlanId plan_id = 1;
  PlanData plan_data = 2;
}
