syntax = "proto3";

package golem.cloud.common;

import "golem/cloud/common/grant_id.proto";
import "golem/cloud/common/project_grant_data.proto";

message ProjectGrant {
  GrantId id = 1;
  ProjectGrantData data = 2;
}
