syntax = "proto3";

package golem.cloud.common;

import "golem/common/account_id.proto";
import "golem/cloud/common/project_action.proto";
import "golem/cloud/common/project_policy_id.proto";

message ProjectGrantDataRequest {
  golem.common.AccountId grantee_account_id = 1;
  ProjectPolicyId project_policy_id = 2;
  repeated ProjectAction project_actions = 3;
  string project_policy_name = 4;
}
