syntax = "proto3";

package golem.cloud.common;

import "golem/cloud/common/project_actions.proto";
import "golem/cloud/common/project_policy_id.proto";

message ProjectPolicy {
  ProjectPolicyId id = 1;
  string name = 2;
  ProjectActions actions = 3;
}
