syntax = "proto3";

package golem.cloud.common;

import "golem/cloud/common/token.proto";
import "golem/cloud/common/token_secret.proto";

message UnsafeToken {
  golem.cloud.common.Token data = 1;
  golem.cloud.common.TokenSecret secret = 2;
}
