syntax = "proto3";

package golem;

import "golem/error_body.proto";

message AccountError {
  oneof error {
    ErrorsBody bad_request = 1;
    ErrorBody unauthorized = 2;
    ErrorBody not_found = 3;
    ErrorBody internal_error = 4;
  }
}
