syntax = "proto3";

package golem.common;


message OAuth2Data {
  string url = 1;
  string user_code = 2;
  string expires = 3;
  string encoded_session = 4;
}
