syntax = "proto3";

package golem;

import "golem/error_body.proto";

message LoginError {
  oneof error {
    ErrorsBody bad_request = 1;
    ErrorBody external = 2;
    ErrorBody internal = 3;
  }
}
