syntax = "proto3";

import public "models/account_id.proto";

package golem;


message AccountSummary {
  AccountId id = 1;
  string name = 2;
  string email = 3;
  int64 template_count = 4;
  int64 worker_count = 5;
  string created_at = 6;
}
