syntax = "proto3";

package golem;

import public "models/account_id.proto";
import public "models/project_type.proto";

message ProjectData {
  string name = 1;
  AccountId owner_account_id = 2;
  string description = 3;
  string default_environment_id = 4;
  ProjectType project_type = 5;
}
