syntax = "proto3";

package golem.cloudservices.projectpolicyservice;

import public "models/empty.proto";
import public "models/error_body.proto";
import public "models/project_policy.proto";
import public "models/project_policy_data.proto";
import public "models/project_policy_error.proto";
import public "models/project_policy_id.proto";
import public "models/token_secret.proto";

service ProjectPolicyService {
  rpc CreateProjectPolicy (CreateProjectPolicyRequest) returns (CreateProjectPolicyResponse);
  rpc GetProjectPolicy (GetProjectPolicyRequest) returns (GetProjectPolicyResponse);
}

message CreateProjectPolicyRequest {
  ProjectPolicyData projectPolicyData = 1;
  TokenSecret tokenSecret = 2;
}

message CreateProjectPolicyResponse {
  oneof result {
    ProjectPolicy success = 1;
    ProjectPolicyError error = 2;
  }
}

message GetProjectPolicyRequest {
  ProjectPolicyId projectPolicyId = 1;
  TokenSecret tokenSecret = 2;
}

message GetProjectPolicyResponse {
  oneof result {
    ProjectPolicy success = 1;
    ProjectPolicyError error = 2;
  }
}

